--- a/src/components/common/MetadataValues.module.css
+++ b/src/components/common/MetadataValues.module.css
@@ -1,5 +1,5 @@
 .container {
-  display: inline-flex;
+  display: flex;
   flex-wrap: wrap;
   gap: var(--space-2) var(--space-4);
 }
